objects/Allocation_Tool_Settings__c.object
<CustomObject>
    <description>This object is where all of the column, row and other information for the Staffing Allocation tool are stored.</description>
    <fields>
        <fullName>Allow_on_girl_only_waves__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is TRUE as default and unticked when a role cannot be allocated to a girl-only wave. Only on “Column” record type.</inlineHelpText>
        <label>Allow on girl-only waves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cluster_record_type__c</fullName>
        <label>Cluster record type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_s__c</fullName>
        <inlineHelpText>Use the Clusters multipicklist to choose which clusters this role should be available for, so that regional differences can be taken into account in the tool.</inlineHelpText>
        <label>Cluster(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BANT</fullName>
                </value>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BCHIC</fullName>
                </value>
                <value>
                    <fullName>BHEN</fullName>
                </value>
                <value>
                    <fullName>BlackCountry</fullName>
                </value>
                <value>
                    <fullName>BWELL</fullName>
                </value>
                <value>
                    <fullName>CAB</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>CAW</fullName>
                </value>
                <value>
                    <fullName>EEB</fullName>
                </value>
                <value>
                    <fullName>ESurrey</fullName>
                </value>
                <value>
                    <fullName>GEM</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>HABAN</fullName>
                </value>
                <value>
                    <fullName>HEAL</fullName>
                </value>
                <value>
                    <fullName>HEN</fullName>
                </value>
                <value>
                    <fullName>HIHO</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>HITCH</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Lanc</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>MRK</fullName>
                </value>
                <value>
                    <fullName>NBham</fullName>
                </value>
                <value>
                    <fullName>NCBirm</fullName>
                </value>
                <value>
                    <fullName>NManc</fullName>
                </value>
                <value>
                    <fullName>RAW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CombinedCell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates cells are combined for team roles.</description>
        <label>CombinedCell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_for_Autumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable for Autumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freeze_priority_2_JPs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticking this checkbox prevents users of the SAT from allocating Priority 2 Job Placements</inlineHelpText>
        <label>Freeze priority 2 JPs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freeze_priority_3_JPs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticking this checkbox prevents users of the SAT from allocating Priority 3 Job Placements</inlineHelpText>
        <label>Freeze priority 3 JPs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JP_record_type__c</fullName>
        <formula>Role__r.JP_Record_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Job Placement record type for this record</inlineHelpText>
        <label>JP record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_number_of_rest_days__c</fullName>
        <formula>Role__r.Min_number_of_rest_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This would give us the ability to set the number of days between the end of one role and the start of the next. This could be different from role to role and from year to year. Only on “Column” record type.</inlineHelpText>
        <label>Min number of rest days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>The number in this fields determines the order this record appears in the SAT</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This field creates the link between the SAT and the role-specific data that is held in Role</inlineHelpText>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Allocation Tool Settings</relationshipLabel>
        <relationshipName>Allocation_Tool_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_end__c</fullName>
        <formula>TEXT(Role__r.End_day__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This looks at the corresponding fields on the Job record to see which other Waves the Contact can be allocated to. Only on “Column” record type.</inlineHelpText>
        <label>Role end</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_length__c</fullName>
        <formula>Role__r.work_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This gives us the ability to set the standard number of days that each role type works. This is different from role to role and could change from year to year. Only on “Column” record type.</inlineHelpText>
        <label>Role length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_start__c</fullName>
        <formula>TEXT(Role__r.Start_day__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This looks at the corresponding fields on the Job record to see which other Waves the Contact can be allocated to. Only on “Column” record type.</inlineHelpText>
        <label>Role start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamName__c</fullName>
        <inlineHelpText>In “Column” records, TeamName will be used to determine the Team allocation for Job Placements that require this</inlineHelpText>
        <label>TeamName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_is_fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the Team is fixed for the role, eg Practitioners (except Practitioner Plus, which is not tied to a team</inlineHelpText>
        <label>Team is fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleName__c</fullName>
        <inlineHelpText>This is the text of the column/rows headers in the Allocation Tool. These need to be unique values.</inlineHelpText>
        <label>VisibleName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Allocation Tool Settings</label>
    <listViews>
        <fullName>Row_records_status</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Allocation_Tool_Settings__c.Row_2014</value>
        </filters>
        <label>Row records (status)</label>
    </listViews>
    <nameField>
        <label>SettingName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Tool Settings</pluralLabel>
    <recordTypes>
        <fullName>Admin_2014</fullName>
        <active>true</active>
        <description>This record type is used for general admin settings of the SAT</description>
        <label>Admin 2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>Admin_2015</fullName>
        <active>true</active>
        <label>Admin 2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>Admin_2016</fullName>
        <active>true</active>
        <label>Admin 2016</label>
    </recordTypes>
    <recordTypes>
        <fullName>Column_2014</fullName>
        <active>true</active>
        <description>The number of records with this record type would determine the number of columns on the Allocation Tool – ie. If there are 5 records with the record type “Column” then there should be 5 columns.</description>
        <label>Column 2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>Column_2015</fullName>
        <active>true</active>
        <label>Column 2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>Column_2016</fullName>
        <active>true</active>
        <label>Column 2016</label>
    </recordTypes>
    <recordTypes>
        <fullName>Row_2014</fullName>
        <active>true</active>
        <description>The number of records with this record type will determine the number of rows on the Allocation Tool.</description>
        <label>Row 2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>Row_2015</fullName>
        <active>true</active>
        <label>Row 2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>Row_2016</fullName>
        <active>true</active>
        <label>Row 2016</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>